# s2e-aobc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: action_item.md  bug_report.md
.github/workflows/: build.yml  check-format.yml  labeler.yml
data/initialize_files/: disturbance.ini  gnss.ini  ground_station.ini  local_environment.ini  satellite.ini  simulation_base.ini
data/initialize_files/components/: ANT_SC.ini  GNSSR_OEM7600.ini  MPU9250.ini  component_interference.ini  cube_wheel_small.ini  mpu9250.ini  nanossoc_d60.ini  oem7600.ini  power_controller.ini  rm3100_aobc.ini  rm3100_external.ini  rw0003.ini  sagitta.ini
data/initialize_files/components/wings_command_sender_to_c2a/: AOBC_CMD_DB_CMD_DB.csv  example.ops  wings_command_sender_to_c2a.ini
data/initialize_files/scenario/: scenario.ini
example/: CMakeLists.txt  CMakeSettings.json  README.md
example/data/initialize_files/: disturbance.ini  gnss.ini  local_environment.ini  satellite.ini  simulation_base.ini
example/data/initialize_files/components/: GYRO_STIM210.ini  mtq_seiren.ini  nanossoc_d60.ini  rm3100_external.ini  rw0003.ini
example/data/initialize_files/scenario/: scenario.csv
s2e-aocs-core/: CMakeLists.txt  common.cmake
s2e-aocs-core/data/initialize_files/: disturbance.ini  local_environment.ini  satellite.ini  satellite_structure.ini  simulation_base.ini
s2e-aocs-core/data/initialize_files/components/: ANT_GS.ini  ANT_SC.ini  GNSSR_OEM7600.ini  GYRO_STIM210.ini  MAG_RM3100_AOBC.ini  MAG_RM3100_EXT.ini  MPU9250.ini  MTQ_Seiren.ini  RW_RW0.003.ini  SAP.ini  SS_nanoSSOCD60.ini  STT_Sagitta.ini  Thruster.ini
s2e-aocs-core/data/logs/logs_230411_181741/: simulation_base.ini
s2e-aocs-core/data/logs/logs_230411_181919/: 230411_181919_default0.csv
s2e-aocs-core/src/: S2E_ISSL6U.cpp
s2e-aocs-core/src/Component/AOCS/: AOBC.cpp  AOBC.h  MPU9250_GYRO.cpp  MPU9250_GYRO.h  MPU9250_MAG.cpp  MPU9250_MAG.h  MTQseiren.cpp  MTQseiren.h  NanoSSOCD60.cpp  NanoSSOCD60.h  OEM7600.cpp  OEM7600.h  RM3100.cpp  RM3100.h  RW0003.cpp  RW0003.h  STIM210.cpp  STIM210.h  Sagitta.cpp  Sagitta.h
s2e-aocs-core/src/Component/Power/: INA260.cpp  INA260.h  PowerController.cpp  PowerController.h
s2e-aocs-core/src/Interface/HILS/: HilsIfDriver.cpp  HilsIfDriver.h
s2e-aocs-core/src/Simulation/Case/: ISSL6U_case.cpp  ISSL6U_case.h
s2e-aocs-core/src/Simulation/Spacecraft/: ISSL6U_Components.cpp  ISSL6U_Components.h  ISSL6U_PortConfig.h  ISSL6Usat.cpp  ISSL6Usat.h
settings/: simulation_base.ini
settings/environment/gnss/: gnss.ini
settings/user_satellite/: disturbance.ini  local_environment.ini  satellite.ini  satellite_structure.ini
settings/user_satellite/components/: mpu9250.ini  mtq_seiren.ini  rm3100_aobc.ini  rm3100_external.ini  rw0003.ini  stim210.ini  thruster.ini
settings/user_satellite/components/wings_command_sender_to_c2a/: wings_command_sender_to_c2a.ini
settings/user_satellite/scenario/: scenario.ini
src/: S2E_ISSL6U.cpp  s2e_aobc.cpp  s2e_aocs_module.cpp
src/Component/AOCS/: AOBC.cpp  AOBC.h  MPU9250_GYRO.cpp  MPU9250_GYRO.h  MPU9250_MAG.cpp  MPU9250_MAG.h  MTQseiren.cpp  MTQseiren.h  NanoSSOCD60.cpp  NanoSSOCD60.h  OEM7600.cpp  OEM7600.h  RM3100.cpp  RM3100.h  RW0003.cpp  RW0003.h  STIM210.cpp  STIM210.h  Sagitta.cpp  Sagitta.h
src/Component/Power/: INA260.cpp  INA260.h  PowerController.cpp  PowerController.h
src/Interface/HILS/: HilsIfDriver.cpp  HilsIfDriver.h
src/Simulation/Case/: ISSL6U_case.cpp  ISSL6U_case.h  sample_case.h
src/Simulation/Spacecraft/: ISSL6U_Components.cpp  ISSL6U_Components.h  ISSL6U_PortConfig.h  ISSL6Usat.cpp  ISSL6Usat.h  aocs_module_components.cpp  aocs_module_components.h  sample_satellite.cpp  sample_satellite.h
src/component/aocs/: aobc.cpp  aobc.hpp  cube_wheel.cpp  cube_wheel.h  cube_wheel.hpp  cubewheel.cpp  cubewheel.h  mpu9250_gyro.cpp  mpu9250_gyro.hpp  mpu9250_gyro_sensor.cpp  mpu9250_gyro_sensor.hpp  mpu9250_mag.cpp  mpu9250_mag.hpp  mpu9250_magnetometer.cpp  mpu9250_magnetometer.hpp  mtq_seiren.cpp  mtq_seiren.hpp  nano_ssoc_d60.cpp  nano_ssoc_d60.hpp  nanossoc_d60.cpp  nanossoc_d60.hpp  oem7600.cpp  oem7600.hpp  rm3100.cpp  rm3100.hpp  rw0003.cpp  rw0003.hpp  sagitta.cpp  sagitta.hpp  stim210.cpp  stim210.hpp
src/component/power/: ina260.cpp  ina260.hpp  power_controller.cpp  power_controller.hpp
src/interface/hils/: hils_if_driver.cpp  hils_if_driver.hpp
src/simulation/case/: sample_case.cpp  sample_case.h  sample_case.hpp
src/simulation/spacecraft/: aocs_module_components.cpp  aocs_module_components.h  aocs_module_components.hpp  aocs_module_port_config.h  aocs_module_port_config.hpp  sample_satellite.cpp  sample_satellite.h  sample_satellite.hpp
